# xDEM

./: .gitignore  CMakeLists.txt  README.md  isoElpsPack.cpp  isoElpsPackTest.cpp  mainClumpParticleTest.cpp  mainClusterLabellingFromOutputFiles.cpp  mainIsoCircPack_WCCM.cpp  mainIsoElpsPackTest.cpp  mainIsoElpsPackTestEntropy.cpp  mainIsoElpsPack_WCCM.cpp  mainQuadronAnalysisFromOutputFiles.cpp  newEllipseContactDetection.cpp
matlab/: NewViewer_HighSpeed.m  TimeHistoryCheck.m  Viewer_cell.m  Viewer_cluster.m  Viewer_forceChain.m
src/: BaseContactModel.h  BaseParticle.cpp  BaseParticle.h  BaseWorld.cpp  BaseWorld.h  CMakeLists.txt  CircularParticle.cpp  CircularParticle.h  ClusterLabelling.cpp  ClusterLabelling.h  ContactGeometry.h  ContactInformation.h  ContactModelList.h  ContactModel_LinearDissipativeFrictional.cpp  ContactModel_LinearDissipativeFrictional.h  ContactModel_UniversalGravity.cpp  ContactModel_UniversalGravity.h  EllipticParticle.cpp  EllipticParticle.h  GluedParticle.cpp  GluedParticle.h  LeesEdwardsBoundaryWorld.cpp  LeesEdwardsBoundaryWorld.h  LongRangeForceWorld.cpp  LongRangeForceWorld.h  MathFunc.h  MathMatrix2d.h  MathVector.h  PeriodicBoundaryWorld.cpp  PeriodicBoundaryWorld.h  PeriodicControlWorld.cpp  PeriodicControlWorld.h  PointParticle.cpp  PointParticle.h  QuadronAnalysis.cpp  QuadronAnalysis.h  SegmentObject.cpp  SegmentObject.h
